	* GSWeb.framework/GSWHyperlink.m
	([GSWHyperlink invokeActionForRequest:inContext:]): Add cast
	to silence compiler on OS X.
	* GSWeb.framework/GSWResourceManager.m
	([GSWResourceManager _applicationGSWBundle]): Remove obsolete 
	logging.
	* GSWeb.framework/NSData+Compress.m ([NSData deflate]):
	Remove dependancy on GNUstep extenstions.
	* GSWeb.framework/stacktrace.m: Add test for __MACH__.
	
2004-02-26  David Ayers  <d.ayers@inode.at>

	* GSWeb.framework/GSWDefaultAdaptorThread.m
	([GSWDefaultAdaptorThread run:]): Replace NSThreadExiting
	with NSThreadWillExitNotification.
	([GSWDefaultAdaptorThread threadExited:]): Ditto.
	([GSWDefaultAdaptorThread readRequestReturnedRequestLine:
	returnedHeaders:returnedData:]): Assign current date to typed
	variable to avoid compiler warning on compare:.
	* GSWeb.framework/GSWUtils.m
	([NSException exceptionWithName:format:]): Adapt variables name
	to not clash with instance variable names on Cocoa.
	([NSException exceptionByAddingUserInfo:]): Ditto.
	([NSException exceptionByAddingToUserInfoKey:format:]): Ditto.
	([NSException exceptionByAddingUserInfoKey:format:]): Ditto.
	
2004-02-25  David Ayers  <d.ayers@inode.at>

	* GSWeb.framework/GSWApplication.h
	* GSWeb.framework/GSWDeployedBundle.h: Replace objc_thread_t
	with NSThread * for caching the thread in the instance variable.

	* GSWeb.framework/Makefile.postamble: Remove config.h during
	make distclean.

2004-02-17  David Ayers  <d.ayers@inode.at>

	* GSWeb.framework/GSWApplication.m
	(GSWApplicationMainReal): Reformat.  Use GSCurrentThread instead
	of objc_thread_id. Remove \n in NSLog type logs.
	(GSWApplicationMain): Ditto.
	([GSWApplication init], [GSWApplication lockRequestHandling],
	[GSWApplication unlockRequestHandling], [GSWApplication lock],
	[GSWApplication unlock], [GSWApplication _sessionClass],
	[GSWApplication run], 
	[GSWApplication addDynCreateClassName:superClassName:],
	[GSWApplication pageWithName:],